--- a/views/index.html
+++ b/views/index.html
@@ -21,8 +21,22 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1>Under Construction</h1>
+          <h1>Still Under Construction</h1>
           <h4><a href="/api">Read My API Documentation</a></h4>
+          <!-- <form class="form-inline" id="newProfileForm">
+          </form>
+          <div id='profileTarget'>
+      <!- handlebars template -->
+      <!-- <script id="profile-template" type="text/x-handlebars-template">
+        {{#each profile}}
+        <hr>
+        <p>
+          <b>{{name}}</b>
+          <button type="button" name="button" class="deleteBtn btn btn-danger pull-right" data-id={{_id}}>Delete</button>
+        </p>
+        {{/each}}
+      </script> -->
+    </div>
         </div>
       </div>
     </div>
